Remove License-Ref-kk-custom
Change-Id: I91005c83c2891bf0852130c27af1e2cfea53fdce

--- a/l4sys/doc/l4sys-l4f-groups.dox
+++ b/l4sys/doc/l4sys-l4f-groups.dox
@@ -1,7 +1,7 @@
 // vi:ft=c
 /* -*- c -*- */
 
-/* SPDX-License-Identifier: GPL-2.0-only or License-Ref-kk-custom */
+/* SPDX-License-Identifier: GPL-2.0-only */
 /*
  * Copyright (C) 2009-2010 Technische Universität Dresden.
  * Copyright (C) 2015-2020 Kernkonzept GmbH.
